Omnibox: Fix one-click unelide when scheme elision is disabled

Previously, the UnapplySteadyStateElisions method had a wrong early
exit for when ONLY the path was elided.

This CL removes that early exit and replaces it with a more robust
check.

Bug: 912671
Change-Id: I1046d54c678a560f1562ff375aba134c1ad01627
Reviewed-on: https://chromium-review.googlesource.com/c/1372849
Reviewed-by: manuk hovanesian <manukh@chromium.org>
Commit-Queue: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615966}
Former-commit-id: e08b8d537e186b187b97fbb519270f44cf4dd7c7